# swagger/v1/swagger.json
@@ -224,6 +224,10 @@
             "type": "string",
             "format": "date_time",
             "nullable": true
+          },
+          "average_service_duration_minutes": {
+            "type": "number",
+            "nullable": true
           }
         },
         "required": [
